--- a/trunk/jsidplay2/src/main/resources/libsidutils/sidid.cfg
+++ b/trunk/jsidplay2/src/main/resources/libsidutils/sidid.cfg
@@ -100,7 +100,7 @@ B1 90 C9 C0 90 08 29 1F 9D ?? ?? C8 B1 90 C9 80 90 ?? 29 7F 0A END
 E0 ?? D0 ?? B9 ?? ?? 8D ?? ?? 8D ?? ?? B9 ?? ?? BC ?? ?? 99 05 D4 A9 ?? 99 06 D4 END
 
 Ash&Dave_Digi
-D0 41 E6 06 A5 06 29 01 F0 15 A0 00 C6 01 B1 02 E6 01 4A 4A 4A 4A 8D 18 D4 8D END
+D0 41 E6 06 A5 06 29 01 F0 15 A0 00 C6 01 B1 ?? E6 01 4A 4A 4A 4A 8D 18 D4 8D END
 
 Ashley_Hogg
 EE ?? ?? 9D ?? ?? C8 B9 ?? ?? 85 ?? 84 ?? 29 7F A8 B9 ?? ?? 9D ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? 9D END
@@ -124,8 +124,7 @@ BD ?? ?? 38 E5 ?? 9D ?? ?? 8D 16 D4 A0 ?? B1 ?? 48 END
 68 29 3F 8D ?? ?? C8 4C ?? ?? 68 29 3F 8D ?? ?? C8 4C ?? ?? 68 AA BD ?? ?? 8D ?? ?? BD ?? ?? 8D ?? ?? C8 8C ?? ?? 60 END
 
 Audial_Arts/Cody
-99 04 D4 BD ?? ?? 99 06 D4 FE ?? ?? E8 E0 03 END
-9D ?? ?? 9D ?? ?? 9D ?? ?? 9D ?? ?? A9 01 9D ?? ?? 20 ?? ?? C9 FB 90 37 C9 FF D0 09 20 ?? ?? 9D END
+8D 18 D4 A2 ?? 8E ?? ?? 20 ?? ?? AD ?? ?? D0 ?? BD ?? ?? F0 ?? 20 ?? ?? BD ?? ?? A8 29 ?? F0 ?? 20 ?? ?? 98 29 ?? F0 END
 
 Audial_Revolution
 9D 01 D4 60 BD ?? ?? C9 05 F0 ?? BD ?? ?? C9 00 F0 ?? DE ?? ?? D0 ?? A9 05 END
@@ -147,13 +146,10 @@ Basic/Jim_Butterfield
 4C 31 B2 35 34 32 37 32 3A 4C 32 B2 35 34 32 37 39 3A 4C 33 B2 35 34 32 38 36 00 AND 31 B2 4C 31 AA 34 3A ?? 32 B2 4C 32 AA 34 3A ?? 33 B2 4C 33 AA 34 00 END
 
 Basic_Program
-97 35 34 32 37 32 END
-B2 35 34 32 37 32 END
-97 35 34 32 39 36 END
-35 34 32 39 36 20 3A END
-97 20 35 34 32 39 36 END
-31 33 AC 34 30 39 36 AA 31 30 32 34 END
-31 33 AC 34 30 39 36 AA 34 AC 32 35 36 END
+B2 35 34 32 37 END
+81 ?? B2 30 A4 END
+97 35 34 32 37 END
+B2 20 35 34 32 37 END
 
 Ben_Daglish
 A8 B9 ?? ?? 48 29 F0 4A 4A 4A 4A END
@@ -248,6 +244,9 @@ A9 00 9D 04 D4 AE ?? ?? BD ?? ?? 85 ?? BD ?? ?? 85 ?? A0 00 B1 ?? C9 64 B0 END
 
 Chris_Grigg
 A9 00 99 00 D4 99 01 D4 BC END
+
+Chris_Grigg_2
+4E ?? ?? 90 0B BD ?? ?? 29 0F C8 11 END
 
 Chris_Hochberger
 A9 ?? 85 ?? A5 ?? 18 65 ?? 09 ?? 8D 0F D4 85 ?? 90 ?? C6 ?? D0 END
@@ -359,7 +358,7 @@ AD ?? ?? 8C 04 D4 8D 04 D4 END
 David_Green
 30 ?? BD ?? ?? 99 02 D4 48 BD ?? ?? 99 03 D4 48 BD ?? ?? 99 05 D4 BD ?? ?? 99 06 D4 AE ?? ?? A9 FF 9D ?? ?? 9D ?? ?? 68 9D ?? ?? 9D ?? ?? 68 9D ?? ?? 9D ?? ?? A9 00 9D END
 
-David_Thiel
+Thiel_Sound_System
 8E ?? ?? 8C ?? ?? A0 ?? 8C ?? ?? 0A AA BD ?? ?? 85 ?? BD ?? ?? 85 ?? B1 ?? 0A 0A 0A 0A 0A A8 20 ?? ?? A2 ?? A1 ?? 99 ?? ?? 20 END
 
 David_Whittaker
@@ -503,10 +502,9 @@ F0 39 CE 01 93 AD 01 93 C9 00 D0 END
 B9 00 ?? 8D 01 D4 B9 00 ?? 8D 00 D4 B9 00 ?? 8D 08 D4 B9 00 ?? 8D 07 D4 B9 00 ?? 8D 0F D4 B9 END
 
 Fred_Gray
-BD ?? ?? 18 7D ?? ?? 9D ?? ?? 0A 0A 0A 0D ?? ?? 9D 02 D4 BD ?? ?? 4A 4A 4A 4A 4A 1D ?? ?? 9D 03 D4 END
-8D ?? ?? A2 00 AD ?? ?? 2D ?? ?? D0 02 A2 02 BD ?? ?? 8D 07 D4 BD ?? ?? 8D 08 D4 60 END
-9D 04 D4 FE 04 D4 AD END
-EE 04 D4 A9 ?? 8D ?? ?? 8D 06 D4 8D 00 D4 END
+BD ?? ?? 9D 04 D4 FE 04 D4 END
+8D ?? ?? E8 BD ?? ?? 8D ?? ?? A9 ?? 8D ?? D4 A9 ?? 8D ?? D4 60 END
+AD ?? ?? 8D 04 D4 EE 04 D4 END
 8D 04 D4 EE 04 D4 BC END
 
 Frederic_Thiesse
@@ -652,9 +650,6 @@ HardTrack_Composer
 
 Heathcliff/DigitalArts
 C8 B1 FE C9 A0 90 0A E9 A0 7D END
-
-Hein_Holt
-9D 02 D4 4C ?? ?? ?? 7F 9D ?? ?? C8 ?? ?? 09 80 9D ?? ?? C8 98 9D END
 
 Henrik_Jensen
 85 ?? B1 ?? C9 E0 90 ?? C9 F0 END
@@ -858,11 +853,6 @@ A9 00 A2 0C 95 ?? 9D 00 D4 9D 0B D4 CA 10 F5 A8 AD END
 John_Prince
 CE ?? ?? AD ?? ?? C9 00 D0 ?? AE ?? ?? BD ?? ?? A8 B9 ?? ?? 8D 00 D4 B9 ?? ?? 8D 01 D4 END
 
-Jon_Dunn&Paul_Hughes
-AD ?? ?? F0 01 60 A9 AND AD ?? ?? F0 03 20 ?? ?? AD ?? ?? F0 ?? CE ?? ?? AD ?? ?? D0 ?? AD ?? ?? 8D ?? ?? CE ?? ?? AD ?? ?? 8D 18 D4 29 0F D0 AND 4C ?? ?? 20 END
-BD ?? ?? F0 03 20 ?? ?? BD ?? ?? F0 03 20 ?? ?? CE ?? ?? CE ?? ?? CA 8E ?? ?? 10 END
-F0 1B BC ?? ?? B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? AC ?? ?? 99 01 D4 BD ?? ?? 99 00 D4 BD ?? ?? AC ?? ?? 99 04 D4 BD ?? ?? F0 05 DE ?? ?? F0 01 60 BD ?? ?? AC ?? ?? 99 04 D4 60 END
-
 Jonas_Hulten
 09 ?? 8D 17 D4 AD ?? ?? 4A 4A 4A 4A 2C ?? ?? 10 ?? 09 ?? 2C ?? ?? 10 ?? 09 ?? 2C ?? ?? 10 END
 
@@ -904,6 +894,9 @@ Kurt_Heiden
 
 Kyle_Johnson
 85 ?? A0 00 A2 00 B1 ?? F0 12 C9 01 D0 04 A2 07 D0 0A C9 02 D0 04 END
+
+K-Byte
+B9 ?? ?? 85 ?? B9 ?? ?? 85 AND B5 ?? 18 69 01 95 ?? B5 ?? 69 00 95 END
 
 Lars_Haard
 4C ?? ?? C9 86 D0 49 A9 01 9D ?? ?? 20 ?? ?? 8D END
@@ -1012,9 +1005,6 @@ Martin_Walker
 
 Martin_Wheeler
 A2 02 A9 00 9D ?? ?? 9D ?? ?? BD ?? ?? A8 BD ?? ?? 99 02 D4 BD ?? ?? 99 03 D4 END
-
-Masteller
-CE ?? ?? D0 ?? A9 ?? 8D 04 D4 B1 39 END
 
 Master_Composer
 0A 2E ?? ?? CA D0 F9 18 69 ?? 8D ?? ?? AD ?? ?? 69 ?? 8D ?? ?? 4C ?? ?? C9 40 F0 26 C9 03 D0 04 A9 00 F0 1A C9 08 D0 04 A9 03 D0 12 C9 3B D0 04 A9 02 D0 0A C9 38 D0 04 A9 01 D0 02 A9 ?? 8D END
@@ -1259,6 +1249,11 @@ A8 BD ?? ?? 99 00 D4 E8 C8 C6 ?? 10 END
 Paul_Hughes
 A2 02 8A 0A A8 38 B9 ?? ?? E9 01 99 ?? ?? B9 ?? ?? E9 00 99 ?? ?? CA 10 ?? A9 ?? 8D END
 
+MusDriver/Paul_Hughes
+AD ?? ?? F0 01 60 A9 AND AD ?? ?? F0 03 20 ?? ?? AD ?? ?? F0 ?? CE ?? ?? AD ?? ?? D0 ?? AD ?? ?? 8D ?? ?? CE ?? ?? AD ?? ?? 8D 18 D4 29 0F D0 AND 4C ?? ?? 20 END
+BD ?? ?? F0 03 20 ?? ?? BD ?? ?? F0 03 20 ?? ?? CE ?? ?? CE ?? ?? CA 8E ?? ?? 10 END
+F0 1B BC ?? ?? B9 ?? ?? 9D ?? ?? B9 ?? ?? 9D ?? ?? AC ?? ?? 99 01 D4 BD ?? ?? 99 00 D4 BD ?? ?? AC ?? ?? 99 04 D4 BD ?? ?? F0 05 DE ?? ?? F0 01 60 BD ?? ?? AC ?? ?? 99 04 D4 60 END
+
 Paul_Mudra
 A6 ?? A4 ?? 9D 01 D4 B9 ?? ?? 9D 00 D4 A9 ?? 09 ?? 9D 04 D4 A6 ?? A9 ?? 95 ?? A8 B1 END
 
@@ -1414,8 +1409,10 @@ SidWinder
 AD ?? ?? F0 ?? CE ?? ?? 88 4C ?? ?? B9 ?? ?? C9 ?? 90 ?? F0 ?? B9 ?? ?? 8D ?? ?? A8 END
 
 Silas_Warner
-9D C0 03 E8 E0 20 D0 F8 A9 00 8D 17 D4 8D END
 69 01 9D ?? ?? A9 00 9D ?? ?? 9D 04 D4 8A 18 69 END
+
+Silas_Warner_Digi
+CE ?? ?? D0 ?? A9 ?? 49 01 8D 17 D4 8D ?? ?? EE ?? ?? D0 ?? EE ?? ?? D0 END
 
 SkylineTech/Boogaloo
 EE ?? ?? AD ?? ?? C9 ?? F0 03 4C ?? ?? 29 00 8D ?? ?? AD ?? ?? C9 40 D0 1D 29 00 8D ?? ?? 8D ?? ?? 8D ?? ?? 8D ?? ?? EE ?? ?? AD ?? ?? C9 ?? D0 05 A9 ?? 8D ?? ?? EE ?? ?? EE ?? ?? AE ?? ?? BC END
@@ -1554,8 +1551,11 @@ Steve_Turner
 C9 ?? ?? ?? ?? ?? ?? 49 FF 18 69 01 ?? ?? ?? ?? ?? ?? 49 FF 69 00 END
 C9 ?? ?? ?? ?? ?? 49 FF 18 69 01 ?? ?? ?? ?? 49 FF 69 00 END
 
-Steven_Baumrucker
+Steven_Baumrucker_1
 8D 06 D4 A9 ?? 8D 0D D4 8D 14 D4 A9 ?? 8D 05 D4 A9 ?? 8D 0C D4 A9 ?? 8D 13 D4 A9 ?? 8D 18 D4 A9 END
+
+Steven_Baumrucker_2
+CE ?? ?? D0 ?? A9 ?? 8D 04 D4 B1 39 END
 
 Steven_Green
 DE ?? ?? D0 ?? BD ?? ?? 29 02 D0 ?? BC ?? ?? B9 ?? ?? 29 FE 99 04 D4 A9 ?? 9D END
@@ -1684,6 +1684,9 @@ C9 D0 90 ?? E9 D0 0A 0A 0A 9D END
 A2 02 BC ?? ?? A9 00 99 05 D4 99 06 D4 A9 08 99 04 D4 CA 10 ?? 60 END
 30 03 4C ?? ?? A9 00 9D ?? ?? A9 08 99 04 D4 98 48 A0 00 BD END
 
+Virtuoso
+9D 02 D4 4C ?? ?? ?? 7F 9D ?? ?? C8 ?? ?? 09 80 9D ?? ?? C8 98 9D END
+
 VoiceEater
 C9 ?? D0 ?? BD ?? ?? 0A 0A 0A 0A 85 ?? B9 ?? ?? 29 0F 05 ?? 99 ?? ?? 4C END
 
@@ -1747,6 +1750,7 @@ Zyborg
 BC ?? ?? 09 01 99 04 D4 8A A8 A9 ?? 99 ?? ?? C8 C8 C8 C0 END
 BD ?? ?? 30 14 29 40 D0 0F A4 ?? A9 FF 99 END
 99 04 D4 68 C9 FF F0 ?? 29 ?? 9D END
+0A 0A 0A A8 B9 ?? ?? 85 ?? F0 ?? A5 ?? 29 07 C9 04 90 ?? 49 07 85 END
 
 ?Alligata/Quicksilva
 B1 ?? 8D 0F D4 C8 B1 ?? 8D 0E D4 ?? ?? ?? ?? ?? ?? B1 END
@@ -1785,17 +1789,11 @@ AD ?? ?? ?? ?? ?? ?? ?? ?? F0 01 60 ?? ?? ?? F0 11 A9 00 ?? ?? ?? A8 B1 FB ?? ??
 ?Digital_Integration
 99 02 D4 BD ?? ?? 99 03 D4 BD ?? ?? 99 04 D4 60 B9 ?? ?? A8 B9 04 D4 29 FE 99 04 D4 60 END
 
-?Douglas_Dragin
-99 04 D4 60 20 ?? ?? A4 ?? 99 02 D4 20 ?? ?? 99 03 D4 60 20 ?? ?? A4 ?? 99 05 D4 20 ?? ?? 99 06 D4 60 END
-
 ?Edge
 99 06 D4 AND 29 C0 0A 2A 2A A8 B9 AND 60 AND 09 01 99 04 D4 60 END
 
 ?Emerald_Software
 F0 3B A9 00 8D 12 D4 AD END
-
-?Epyx_3
-99 ?? ?? E8 E8 E0 18 90 D2 C6 ?? D0 CC A2 ?? A9 00 9D 00 D4 END
 
 ?Gamestar
 85 ?? C8 B1 ?? 48 C8 B1 ?? 85 ?? 68 END
@@ -1823,9 +1821,6 @@ F0 05 CA CA 10 F7 60 BC END
 
 ?Lieblich&Evans
 F0 F8 BC ?? ?? BD ?? ?? ?? 06 BD ?? ?? 4C ?? ?? BD ?? ?? 4C ?? ?? BD ?? ?? F0 09 BC ?? ?? BD ?? ?? 99 04 D4 8A 0A AA AC ?? ?? B9 ?? ?? D0 03 4C END
-
-?Lieblich&Grigg
-99 06 D4 60 E0 03 10 ?? BD ?? ?? A8 BD ?? ?? 99 04 D4 END
 
 ?Macsen
 A9 ?? 8D 04 D4 EE 04 D4 A0 END
